@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-90: LongDoubleFloatDoubleVertex has possibily the iterator() 
+  implementation broken (claudio)
+
   GIRAPH-99: Make AdjacencyListVertexReader and its constructor public.
   (Kohei Ozaki via jghoman)
 
